zarf/k8s/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddd-fast-api
spec:
  ingressClassName: nginx
  rules:
    - host: ddd-fast-api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ddd-fast-api
                port:
                  name: http
